# crew-ai

./: README.md  crewai_ex00.py  crewai_ex01.py  pyproject.toml
notebooks/: Research_Write_Article.ipynb  Research_Write_Article_CrewAI.ipynb  Research_Write_Article_LangChain_LCEL_Parallel.ipynb  Research_Write_Article_LangChain_LCEL_Sequential.ipynb
