[project]
name = "crew-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai==1.6.1",
    "crewai-tools==1.6.1",
    "jupyterlab>=4.5.6",
    "langchain==0.3.20",
    "langchain-core==0.3.41",
    "langchain-ollama==0.2.3",
    "litellm>=1.82.6",
]
